# bevy-brawl

./: .editorconfig  Cargo.toml
assets/environment_maps/: kloofendal_43d_clear_puresky_diff_1k.ktx2
assets/models/: test_map.glb
src/: camera.rs  character_controller.rs  main.rs  player.rs  prelude.rs  world.rs
src/ability/: cast_ability.rs  fireball.rs  magic_missile.rs  mod.rs
src/audio/: mod.rs
src/camera/: mod.rs  skybox.rs  utils.rs
src/cursor_caster/: mod.rs
src/game_controls/: assets.rs  cleanup.rs  mod.rs
src/player/: ability_caster_controller.rs  character_controller.rs  mod.rs
