[package]
name = "bevy-brawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking", "jpeg"] }
bevy-inspector-egui = "0.23.0"
bevy_framepace = "0.15.0"
bevy_hanabi = "0.10.0"
bevy_panorbit_camera = "0.14.0"
bevy_xpbd_3d = "0.4.2"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
