[package]
name = "bevy-brawl"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Dominik Stumpf <s.dominik.work@gmail.com>"]
exclude = ["dist", "build", "assets"]

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "jpeg",
] }
bevy-inspector-egui = "0.23.0"
bevy_asset_loader = "0.20.0"
bevy_framepace = "0.15.0"
bevy_hanabi = "0.10.0"
bevy_kira_audio = "0.19.0"
bevy_panorbit_camera = "0.14.0"
bevy_screen_diagnostics = "0.5.0"
bevy_xpbd_3d = "0.4.2"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
strip = "debuginfo"
opt-level = 0       # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"
# lto = "thin" # Enable for more inlining with a bigger tradeoff in compile times

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1
